# OpenFreebuds

./: .gitattributes  .gitignore  .mmk_ab_config  CHANGELOG.md  Makefile  README.md  Vagrantfile  additional_info.txt  crowdin.yml  justfile  make_release.py  openfreebuds.nsi  openfreebuds.spec  pdm.toml  pyproject.toml  requirements-pkg.txt  requirements.txt  requirements_lib.txt
.github/workflows/: build-test.yml  build-test.yml.off  on_push.yml
OpenFreebuds_Desktop/: .gitignore  Makefile  README.md  console_test.py  main.py  make.py  make_win32.cmd  requirements.txt  requirements_lib.txt  requirements_win32.txt
OpenFreebuds_Desktop/debian/: .gitignore  changelog  control  copyright
OpenFreebuds_Desktop/openfreebuds/: event_bus.py  events.py  manager.py  protocol_utils.py
OpenFreebuds_Desktop/openfreebuds_applet/: __init__.py  __main__.py  applet.py  hotkeys.py  icons.py  l18n.py  settings.py  tool_actions.py  tool_hotkeys.py  tool_server.py  tool_update.py  tools.py
OpenFreebuds_Desktop/openfreebuds_assets/: server_help.html
OpenFreebuds_Desktop/openfreebuds_backend/: _linux.py  _windows.py
OpenFreebuds_Desktop/src/: ofb_launcher.py  version_info.py
OpenFreebuds_Desktop/tools/: build.py  build_windows.py  installer.nsi  linux_entrypoint.py  mk_version_info.py  openfreebuds.desktop
debian/: changelog  control  copyright  rules
debian/source/: options
docs/: .~lock.research.ods#  accent.json  icon.xcf  research.ods
docs/devices/: HUAWEI_FreeArc.md  HUAWEI_FreeBuds_4i.md  HUAWEI_FreeBuds_5i.md  HUAWEI_FreeBuds_6i.md  HUAWEI_FreeBuds_Pro.md  HUAWEI_FreeBuds_Pro_2.md  HUAWEI_FreeBuds_Pro_3.md  HUAWEI_FreeBuds_Pro_5.md  HUAWEI_FreeBuds_Pro_5_driver.md  HUAWEI_FreeBuds_SE.md  HUAWEI_FreeBuds_SE_2.md  HUAWEI_FreeBuds_Studio.md  HUAWEI_FreeLace_Pro.md  HUAWEI_FreeLace_Pro_2.md
openfreebuds/: __init__.py  __main__.py  constants.py  main.py  shortcuts.py  webserver.py
openfreebuds/driver/: __init__.py  constants.py  utils.py
openfreebuds/exceptions/: __init__.py
openfreebuds/manager/: generic.py  main.py  standalone.py
openfreebuds/utils/: __init__.py  event_bus.py  logger.py  stupid_rpc.py
openfreebuds_backend/: __init__.py  dummy.py  exception.py
openfreebuds_backend/darwin/: _sdp.py  bt_macos.py  misc_macos.py  rfcomm_transport.py
openfreebuds_backend/linux/: bluez_io.py  linux_misc.py  ui_gtk.py
openfreebuds_backend/windows/: bt_win32.py  media_win32.py  misc_win32.py  ui_win32.py
openfreebuds_cmd/: __main__.py  launcher.py  main.py  utils.py
openfreebuds_qt/: __init__.py  _constants_factory.py  async_qt_loop.py  constants.py  generic.py  i18n_mappings.py  launcher.py  main.py  qt_i18n.py  version_info.py
openfreebuds_qt/addons/: device_auto_select.py  report_tool.py
openfreebuds_qt/app/: main.py  qt_utils.py
openfreebuds_qt/assets/: dependencies.txt  pw.mmk.OpenFreebuds.metainfo.xml
openfreebuds_qt/config/: __init__.py  config_lock.py  dbus_config_lock.py  feature.py  main.py
openfreebuds_qt/designer/: about_module.ui  automation_module.ui  dependency_missing.ui  device_info.ui  device_other.ui  dialog_error.ui  dialog_manual_connect.ui  dialog_profile_picker.ui  dual_connect.ui  first_run_dialog.ui  hotkeys.ui  linux_extras.ui  list_item.ui  main_window.ui  module_device_select.ui  module_geatures.ui  sound_quality.ui  stupid_rpc_setup.ui  ui_settings.ui
openfreebuds_qt/i18n/: __init__.py  en.ts  ru.ts
openfreebuds_qt/icon/: qt_icon.py  tray_factory.py
scripts/: .gitignore  bump_version.py  bump_version.sh  bump_version_git.sh  constants.sh  flatpak_install.sh  install_dpkg_dependencies.sh  make.py  make_qt_parts.sh  openfreebuds.desktop  openfreebuds.nsi  openfreebuds.spec  openfreebuds_portable.spec  pw.mmk.OpenFreebuds.yml  python3-requirements.json  sync_translations.sh  sync_translations_fill_msgstr.py  update_dependencies_file.sh
src/: ofb_launcher.py  version_info.py
tools/: .gitignore  Vagrantfile  build.py  build_cli.py  linux_entrypoint.py
(+520 files in other folders)
