[tool.poetry]
name = "OpenFreebuds"
version = "0.16.2"
description = "FOSS Windows/Linux client for HUAWEI FreeBuds headset series"
authors = ["MelianMiko <support@mmk.pw>"]
packages = [
    { include = "openfreebuds" },
    { include = "openfreebuds_qt" },
    { include = "openfreebuds_backend" },
    { include = "openfreebuds_cmd" },
]
include = [
    { path = "openfreebuds/assets", format = ["sdist", "wheel"] },
    { path = "openfreebuds_qt/assets", format = ["sdist", "wheel"] },
    { path = "openfreebuds_qt/assets/i18n/*.qm", format = ["wheel"] },
    { path = "openfreebuds_qt/designer/*.py", format = ["wheel"] },
]

[tool.poetry.scripts]
openfreebuds_qt = 'openfreebuds_qt:main'
openfreebuds_cmd = 'openfreebuds_cmd:main'

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pillow = "^11.0.0"
psutil = "^6.1.0"
aiohttp = "^3.11.2"
qasync = "^0.27.1"
pynput = "^1.7.7"
winsdk = { version = "1.0.0b10", platform = "win32" }
dbus-next = "^0.2.3"

[tool.poetry.group.no_flatpak.dependencies]
pyqt6 = "^6.7.1"
mmk-updater = "0.15.5"

[tool.poetry.group.extras.dependencies]
aiocmd = ">=0.1.5,<0.2.0"
pynput = ">=1.7.6,<1.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
pyinstaller = "6.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
