[project]
name = "OpenFreebuds"
version = "0.17.3"
description = "FOSS Windows/Linux client for HUAWEI FreeBuds headset series"
authors = [
    {name = "MelianMiko", email = "support@mmk.pw"},
]
requires-python = "<3.15,>=3.11"
dependencies = [
    "aiocmd<0.2.0,>=0.1.5",
    "pillow<12.0.0,>=11.3.0",
    "psutil<8.0.0,>=7.1.0",
    "aiohttp<4.0.0,>=3.13.0",
    "qasync<1.0.0,>=0.28.0",
    "pynput<2.0.0,>=1.7.7",
    "dbus-next<1.0.0,>=0.2.3",
    "winsdk==1.0.0b10; sys_platform == 'win32'",
]

[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.3.2",
    "pytest-asyncio<1.0.0,>=0.24.0",
    "pyinstaller==6.19.0; sys_platform == 'win32'",
    "pyside6>=6.8.2.1; sys_platform == 'win32'",
    "requirements-parser>=0.11.0",
    "setuptools>=82.0.0",
]
no_flatpak = [
    "pyqt6<7.0.0,>=6.9.1",
    "mmk-updater==0.15.6",
]

[tool.pdm.resolution]
excludes = ["evdev"]

[tool.pdm.build]
includes = [
    "openfreebuds",
    "openfreebuds_qt",
    "openfreebuds_cmd",
    "openfreebuds_backend",
    "openfreebuds_qt/assets/i18n/*.qm",
    "openfreebuds_qt/designer/*.py",
]

[project.scripts]
openfreebuds_qt = "openfreebuds_qt:main"
openfreebuds_cmd = "openfreebuds_cmd:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
